--- a/index.html
+++ b/index.html
@@ -1,29 +1,38 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>App Store</title>
+  <title>Windows App Store</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-  <h1>App Store</h1>
+  <h1>Welcome to the Windows App Store</h1>
   
   <div id="appList">
-    <h2>Apps:</h2>
+    <h2>Installed Apps:</h2>
     <ul id="appItems">
       <!-- Existing app items will be dynamically added here -->
+      <li>
+        <img src="logo.png" alt="App 1">
+        <div class="app-details">
+          <h3>App 1</h3>
+          <p>Description of App 1</p>
+          <p><strong>Author:</strong> John Doe</p>
+          <p><strong>Version:</strong> 1.0</p>
+          <a href="logo.png">Download Installer</a>
+        </div>
+      </li>
+      <li>
+        <img src="logo.png" alt="App 2">
+        <div class="app-details">
+          <h3>App 2</h3>
+          <p>Description of App 2</p>
+          <p><strong>Author:</strong> Jane Smith</p>
+          <p><strong>Version:</strong> 2.0</p>
+          <a href="logo.png">Download Installer</a>
+        </div>
+      </li>
     </ul>
   </div>
-  
-  <h2>Add an App:</h2>
-  <form id="addAppForm">
-    <input type="text" id="appNameInput" placeholder="App Name" required>
-    <input type="text" id="appDescInput" placeholder="Description" required>
-    <input type="text" id="appAuthorInput" placeholder="Author" required>
-    <input type="text" id="appVersionInput" placeholder="Version" required>
-    <input type="file" id="appImageInput" accept="image/*" required>
-    <input type="file" id="appInstallerInput" accept=".exe" required>
-    <button type="submit">Add App</button>
-  </form>
   
   <script src="script.js"></script>
 </body>
