--- a/index.html
+++ b/index.html
@@ -12,23 +12,27 @@
     <ul id="appItems">
       <!-- Existing app items will be dynamically added here -->
       <li>
-        <img src="logo.png" alt="App 1">
-        <div class="app-details">
-          <h3>App 1</h3>
-          <p>Description of App 1</p>
-          <p><strong>Author:</strong> John Doe</p>
-          <p><strong>Version:</strong> 1.0</p>
-          <a href="logo.png">Download Installer</a>
+        <div class="app-tile">
+          <img src="logo.png" alt="App 1" class="app-image">
+          <div class="app-details">
+            <h3>App 1</h3>
+            <p>Description of App 1</p>
+            <p><strong>Author:</strong> John Doe</p>
+            <p><strong>Version:</strong> 1.0</p>
+            <button class="app-button">Download</button>
+          </div>
         </div>
       </li>
       <li>
-        <img src="logo.png" alt="App 2">
-        <div class="app-details">
-          <h3>App 2</h3>
-          <p>Description of App 2</p>
-          <p><strong>Author:</strong> Jane Smith</p>
-          <p><strong>Version:</strong> 2.0</p>
-          <a href="logo.png">Download Installer</a>
+        <div class="app-tile">
+          <img src="logo.png" alt="App 2" class="app-image">
+          <div class="app-details">
+            <h3>App 2</h3>
+            <p>Description of App 2</p>
+            <p><strong>Author:</strong> Jane Smith</p>
+            <p><strong>Version:</strong> 2.0</p>
+            <button class="app-button">Download</button>
+          </div>
         </div>
       </li>
     </ul>
